--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,23 @@ h1 {
 .dark-mode {
     background-color: #2c2c2c;
     color: #fafafa;
+    
+}
+
+#darkmodebutton { 
+    /* fix position */
+    position: sticky;
+
+}
+
+#rightarrow {
+    /* test */
+    position: fixed;
+    background-color: green;
+}
+
+#leftarrow {
+    /* test */
+    position: fixed;
+    background-color: green;
 }
